@@ -1,3 +1,9 @@
+2010-05-13  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* dos-fns.el: Add "dos-" prefix for namespace control.
+	(convert-standard-filename): Define as alias for
+	dos-convert-standard-filename but only if applicable.
+
 2010-05-12  Alan Mackenzie  <acm@muc.de>
 
 	* progmodes/cc-cmds.el (c-beginning-of-defun, c-end-of-defun):
